# reader3

./: .dockerignore  .gitignore  COVER_FIX.md  Dockerfile  EXPORT_FEATURE_VERIFICATION.md  LIBRARY_REDESIGN.md  README.md  START_SERVER.md  docker-compose.yml  export_service.py  markdown_exporter.py  pdf_exporter.py  pyproject.toml  reader3.py  run_tests.sh  server.py
.kiro/specs/book-export/: design.md  requirements.md  tasks.md
backend/: cli.py  main.py
backend/app/services/: export_service.py  image_processor.py  markdown_exporter.py  pdf_exporter.py  reader3.py
backend/tests/: README.md  TEST_RESULTS.md  conftest.py  test_export_service.py  test_image_processor.py  test_reading.py
epubs/: [哈佛教授的心理学原理]威廉·詹姆斯.epub  fleming-on-her-majesty-s-secret-service.epub  世界尽头的咖啡馆.epub  关键跃升：新任管理者成事的底层逻辑.epub  学会提问（原书第12版）.epub
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: books.ts  client.ts  exports.ts  mock.ts
frontend/src/app/: App.tsx  AppShell.tsx  events.ts
frontend/src/components/: BookCard.tsx  BookGrid.tsx  ChapterNav.tsx  ReaderToolbar.tsx  TocSidebar.tsx
frontend/src/pages/: HomePage.tsx  LibraryPage.tsx  NotFoundPage.tsx  ReaderPage.tsx  ToolsPage.tsx
frontend/src/styles/: global.css  theme.css
frontend/src/types/: book.ts
nginx/: logto.conf  nginx-logto.conf
templates/: library.html  reader.html
tests/: README.md  __init__.py  conftest.py  test_export.py  test_export_service.py  test_image_processor.py  test_reading.py
